# flight

./: .gitignore  Cargo.toml  Readme.md  Rocket.toml  config.json  flight.drawio  课程设计报告.doc
.VSCodeCounter/2023-12-04_14-44-50/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-12-04_14-45-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-12-04_14-45-26/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-12-04_14-46-21/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-12-04_14-55-00/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: cors.rs  flight.rs  initdb.rs  main.rs  payment.rs  routes.rs  user.rs
static/css/: admin.css  all.css  index.css  my.css
static/js/: my.js
sum/src/: initdb.rs  main.rs  payment.rs  user.rs
sum/static/css/: admin.css  button&input.css  index.css  search.css  user.css
sum/static/js/: my.js
sum/templates/: admin.html.tera  buy.html.tera  error.html.tera  index.html.tera  login.html.tera  search.html.tera
templates/: admin.html.tera  buy.html.tera  index.html.tera  login.html.tera  register.html.tera  search.html.tera  user.html.tera
