[package]
name = "flight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
chrono = "*"
serde = "*"
rocket = { version = "*", features = ["secrets"] }
lazy_static = "*"
rand = "*"
rust-crypto = "*"

[dependencies.rocket_dyn_templates]
rocket_dyn_templates = "*"
features = ["tera"]